# Alpha_tensor2

./: .gitignore  CMakeLists.txt  README.md  derevo.cpp  derevo.h  main.cpp  main.h  main_test.cpp  model.cpp  model.h  model_test.cpp  read.cpp  read.h  save.cpp  vmul3.cpp  vmul3.h
oneapi-tbb-2022.0.0/lib/ia32/vc14_uwp/: tbb12.lib  tbb12_debug.lib
oneapi-tbb-2022.0.0/lib/intel64/vc14_uwp/: tbb.lib
